# managerlab

./: .gitignore  .mcp.json  .neoconf.json  .pre-commit-config.yaml  ACTIVITY_EVENTS_GUIDE.md  AGENTS.md  BACKEND_TESTING_SUMMARY.md  CLAUDE.md  CLAUDE_SETUP.md  EMAIL_PLATFORM_PLAN.md  INBOUND_EMAIL_IMPLEMENTATION.md  LOGGING_MIGRATION.md  Makefile  PRODUCTION_WORKER_DEPLOYMENT.md  QUEUE_SETUP.md  README.md  TASK_REGISTRY_GUIDE.md  TESTING_QUICK_REFERENCE.md
backend/: .dockerignore  CLAUDE.md  Dockerfile  Dockerfile.dev-db  alembic.ini  docker-compose.dev.yml  docker-compose.test.yml  openapi_schema.json  pyproject.toml  test_factory.py  test_lambda.py
backend/.basedpyright/: baseline.json
backend/alembic/: README.md  env.py  fix_types_hook.py
backend/alembic/versions/: 02b487893c57_.py  04296f2f1a16_rename_oauth_state_redirect_uri_to_.py  06ea3c9fc6cd_remove_legacy_media_fields.py  0d2e21bdebce_add_roster_birthdate.py  125656db763e_remove_waitlist.py  1321d4e2f093_add_documents_table.py  13a5281c9181_harden_inbound_email_processing.py  14cf48adaec3_roster_roles_team.py  1991909290ec_add_campaign_and_deliverable_.py  19f7d563fb31_auto_generated_migration.py  1b6e7f2a0a0b_add_thread_viewer_events_table.py  230e504ec19d_add_inbound_email_table.py  235c82a83956_complete_schema.py  2a7044f6b274_change_message_content_to_jsonb_for_.py  2fe5f8d99202_add_activity_events_table.py  31e0afb7f242_add_profile_photo_and_social_media_.py  323d5b52334f_fix_rls_policies_for_dashboards_events_.py  38185b743a7f_magic_link_tables.py  39b4f471b02b_add_deleted_at_to_dashboard.py  3fad5453e29b_to_demo.py  49406ed19c7c_approval_on_media_mapping.py  4a15257046e0_rls.py  503265b522c9_enable_rls_on_all_tables.py  521dafcba94d_refactor_thread_read_status_to_append_.py  56ef7b94a04f_add_rls_to_dashboard.py  62374ba3d425_remove_all_rls_policies.py  6416d060aa23_update_address_fields_to_text_and_add_.py  70595ac371c4_add_dashboards_table.py  717e518ffc3a_brand_fields.py  738c65a4ebae_.py  77b03a65ec08_add_rls_columns_to_deliverable_media.py  77e2b91a11d3_rename_posts_to_deliverables.py  789df888a224_migrate_enums_to_text.py  7bf2c8fe7033_.py  80e1fa2d780f_initial_migration.py  80e1fa2d780f_users.py  82cd4683f530_add_brand_contacts.py  82e1cad9f41e_remove_widget_position_columns.py  8734600bf9f4_add_campaign_contracts.py  8e3df4aba01e_.py  (+27 more)
backend/app/: __init__.py  config.py  factory.py  handler.py  index.py  logging_config.py
backend/app/actions/: __init__.py  base.py  deps.py  enums.py  models.py  registry.py  routes.py  schema_generator.py  schemas.py  services.py  state_actions.py
backend/app/addresses/: __init__.py  enums.py  models.py  schemas.py
backend/app/agents/: __init__.py  campaign_decoder.py  schemas.py
backend/app/auth/: crypto.py  disposable_emails.py  enums.py  google.py  guards.py  models.py  recaptcha.py  routes.py  schemas.py  scope_context.py  tasks.py  tokens.py
backend/app/base/: grants.py  models.py  registry.py  rls_comparator.py  rls_entity.py  rls_operations.py  routes.py  schemas.py  scope_mixins.py  threadable_mixin.py
backend/app/brands/: actions.py  enums.py  object.py  objects.py  routes.py  schemas.py  top_level_actions.py  utils.py
backend/app/campaigns/: actions.py  enums.py  models.py  object.py  objects.py  routes.py  schemas.py  service.py  tasks.py  top_level_actions.py
backend/app/client/: openai_client.py  s3_client.py
backend/app/dashboard/: __init__.py  actions.py  enums.py  models.py  routes.py  schemas.py
backend/app/deliverables/: actions.py  enums.py  models.py  routes.py  (+3 more)
backend/emails/: CLAUDE.md  README.md  design-tokens.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
backend/scripts/: check_data.py  create_fixtures.py  create_realistic_invoices.py  create_realistic_invoices.sql  create_roster_and_deliverables.sql  create_two_year_growth_data.sql  debug_logging.py  migrate.py  nuke_db.py  sqid.py  start-worker.sh  start.sh  test_campaign_extraction.py  test_msgspec_raw.py  test_openai_direct.py  test_openai_responses.py  test_openai_schema.py  test_openai_simple.py  test_schema_generation.py
backend/tests/: README.md  TESTING_GUIDE.md  conftest.py  test_basic.py  test_event_consumers.py  test_rls.py  test_rls_diagnostic.py  test_thread_viewer_store.py  test_time_series.py  test_update_model.py
(+681 files in other folders)
