[project]
name = "manageros"
version = "0.1.0"
description = "Backend for manageros"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "litestar[standard,sqlalchemy,opentelemetry]",
  "sqlalchemy",
  "psycopg[binary]", # psycopg3 for async operations
  "psycopg2-binary", # psycopg2 for sync operations (alembic)
  "pydantic",
  "requests",
  "python-dotenv",
  "boto3",
  "uvicorn",
  "aiohttp",
  "advanced-alchemy",
  "pytest-asyncio",
  "pytest",
  "ipdb",
  "ipython>=9.5.0",
  "ruff",
  "sqids>=0.5.2",
  "polyfactory>=2.22.2",
  "faker>=37.6.0",
  "greenlet>=3.2.4",
  "litestar-saq>=0.1.6",
  "saq[postgres]>=0.25.2",
  "psycopg[pool]>=3.2.0",
  "pillow>=11.3.0",
]

[dependency-groups]
dev = ["debugpy>=1.8.17", "mypy>=1.18.2", "watchdog>=6.0.0"]
