[project]
name = "manageros"
version = "0.1.0"
description = "Backend for manageros"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "litestar[standard,sqlalchemy,opentelemetry]",
  "sqlalchemy",
  "psycopg[binary]", # psycopg3 for async operations
  "psycopg2-binary", # psycopg2 for sync operations (alembic)
  "pydantic",
  "requests",
  "python-dotenv",
  "boto3",
  "uvicorn",
  "aiohttp",
  "advanced-alchemy",
  "pytest-asyncio",
  "pytest",
  "ipdb",
  "ipython>=9.5.0",
  "ruff",
  "sqids>=0.5.2",
  "polyfactory>=2.22.2",
  "faker>=37.6.0",
  "greenlet>=3.2.4",
  "litestar-saq>=0.1.6",
  "saq[postgres]>=0.25.2",
  "psycopg[pool]>=3.2.0",
  "pillow>=11.3.0",
  "alembic-utils>=0.8.8",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
 "basedpyright>=1.23.0",
 "watchdog>=6.0.0",
 "types-boto3>=1.0.2",
 "pytest-databases[postgres]>=0.15.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"app/index.py" = ["E402"]  # Allow imports after code for model discovery
"alembic/env.py" = ["E402"]  # Allow imports after code for alembic setup
"alembic/versions/*.py" = ["E501"]  # Allow long lines in migration files (SQL strings)
"app/base/scope_mixins.py" = ["N802"]  # RLSMixin is a factory function (PascalCase is intentional)
"app/state_machine/models.py" = ["N802", "N805"]  # Factory function + SQLAlchemy declared_attr uses cls
"app/utils/configure.py" = ["N802"]  # Property names match environment variables (uppercase)

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.basedpyright]
typeCheckingMode = "basic"
ignore = ["alembic/versions"]
reportIncompatibleMethodOverride = "none"
reportGeneralTypeIssues = "warning"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
